--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/lodash": "^4.17.16",
     "axios": "^1.8.4",
     "chart.js": "^4.4.8",
+    "lodash": "^4.17.21",
     "pinia": "^2.1.7",
     "vue": "^3.3.4",
     "vue-chartjs": "^5.3.2",
