--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "pinia": "^2.1.7",
     "vue": "^3.3.4",
     "vue-chartjs": "^5.3.2",
+    "vue-i18n": "^9.14.4",
     "vue-router": "^4.5.0",
     "vue-toastification": "^2.0.0-rc.5"
   },
