--- a/package.json
+++ b/package.json
@@ -23,12 +23,13 @@
   "devDependencies": {
     "@types/node": "^20.5.9",
     "@vitejs/plugin-vue": "^4.2.3",
+    "@vue/compiler-sfc": "^3.5.13",
     "autoprefixer": "^10.4.15",
     "postcss": "^8.4.29",
     "tailwindcss": "^3.3.3",
-    "typescript": "^5.2.2",
+    "typescript": "^5.8.3",
     "vite": "^4.4.9",
-    "vue-tsc": "^1.8.5"
+    "vue-tsc": "^2.2.8"
   },
   "keywords": [],
   "author": "",
